--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                     <div class="main-shop-list-item">
                                         <div class="shop-links-wrapper">
                                             <div class="shop-link-block"><img loading="lazy" alt="photo"
-                                                    src="assets/images/Items/item (1).jpg" class="shop-list-image">
+                                                    src="assets/images/Items/item (15).jpg" class="shop-list-image">
                                             </div>
                                         </div>
                                         <div class="info">
@@ -409,7 +409,68 @@
         </div>
     </section>
 
+    <div class="progress-wrap" id="progress-scroll">
+        <svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
+            <path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98" />
+        </svg>
+    </div>
+
     <script src="tabs.js"></script>
+
+    <script>
+        // scrolling for top
+
+        const scroller = document.getElementById("progress-scroll");
+
+        if (scroller) {
+            scroller.addEventListener("click", () => {
+                window.scrollTo({ top: 0, behavior: "smooth" });
+            });
+        }
+
+        document.addEventListener("DOMContentLoaded", () => {
+            "use strict";
+
+            // Scroll back to top
+
+            const progressPath = document.querySelector('.progress-wrap path');
+
+            if (progressPath) {
+                const pathLength = progressPath.getTotalLength();
+
+                progressPath.style.transition = 'none';
+                progressPath.style.strokeDasharray = `${pathLength} ${pathLength}`;
+                progressPath.style.strokeDashoffset = `${pathLength}`;
+                progressPath.getBoundingClientRect();
+                progressPath.style.transition = 'stroke-dashoffset 10ms linear';
+
+                const updateProgress = () => {
+                    const scroll = window.scrollY || document.documentElement.scrollTop;
+                    const height = document.documentElement.scrollHeight - window.innerHeight;
+                    const progress = pathLength - (scroll * pathLength / height);
+                    progressPath.style.strokeDashoffset = `${progress}`;
+                };
+
+                window.addEventListener('scroll', updateProgress);
+
+                const offset = 50;
+
+                window.addEventListener('scroll', () => {
+                    if (window.scrollY > offset) {
+                        const progressWrap = document.querySelector('.progress-wrap');
+                        if (progressWrap) {
+                            progressWrap.classList.add('active-progress');
+                        }
+                    } else {
+                        const progressWrap = document.querySelector('.progress-wrap');
+                        if (progressWrap) {
+                            progressWrap.classList.remove('active-progress');
+                        }
+                    }
+                });
+            }
+        });
+    </script>
 </body>
 
 </html>
