--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                     <div class="main-shop-list-item">
                                         <div class="shop-links-wrapper">
                                             <div class="shop-link-block"><img loading="lazy" alt="photo"
-                                                    src="assets/images/Items/item (15).jpg" class="shop-list-image">
+                                                    src="assets/images/item (1).jpg" class="shop-list-image">
                                             </div>
                                         </div>
                                         <div class="info">
@@ -145,7 +145,7 @@
                                     <div class="main-shop-list-item">
                                         <div class="shop-links-wrapper">
                                             <div class="shop-link-block"><img loading="lazy" alt="photo"
-                                                    src="assets/images/Items/item (2).jpg" class="shop-list-image">
+                                                    src="assets/images/item (2).jpg" class="shop-list-image">
                                             </div>
                                         </div>
                                         <div class="info">
@@ -161,7 +161,7 @@
                                     <div class="main-shop-list-item">
                                         <div class="shop-links-wrapper">
                                             <div class="shop-link-block"><img loading="lazy" alt="photo"
-                                                    src="assets/images/Items/item (3).jpg" class="shop-list-image">
+                                                    src="assets/images/item (3).jpg" class="shop-list-image">
                                             </div>
                                         </div>
                                         <div class="info">
@@ -177,7 +177,7 @@
                                     <div class="main-shop-list-item">
                                         <div class="shop-links-wrapper">
                                             <div class="shop-link-block"><img loading="lazy" alt="photo"
-                                                    src="assets/images/Items/item (4).jpg" class="shop-list-image">
+                                                    src="assets/images/item (4).jpg" class="shop-list-image">
                                             </div>
                                         </div>
                                         <div class="info">
