--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@
                                         </div>
                                         <div class="info">
                                             <a href="/product/makeup-brush-set" class="shop-item-link">
-                                                Makeup brush set
+                                              Gabrini
                                             </a>
-                                            <div class="shop-item-short-info">Enhancing beauty to let you shine</div>
-                                            <div class="shop-item-price">$&nbsp;34.00&nbsp;USD</div>
+                                            <div class="shop-item-short-info">Porcelain Make-Up SPF 15 Fondotinta Ultra Coprente</div>
+                                            <div class="shop-item-price">&nbsp;40&nbsp;TMT</div>
                                         </div>
                                     </div>
                                 </div>
@@ -150,10 +150,10 @@
                                         </div>
                                         <div class="info">
                                             <a href="/product/makeup-brush-set" class="shop-item-link">
-                                                Makeup brush set
+                                                Fabirlic Expert
                                             </a>
-                                            <div class="shop-item-short-info">Enhancing beauty to let you shine</div>
-                                            <div class="shop-item-price">$&nbsp;34.00&nbsp;USD</div>
+                                            <div class="shop-item-short-info">Whitening Face Cream SPF 15</div>
+                                            <div class="shop-item-price">&nbsp;120&nbsp;TMT</div>
                                         </div>
                                     </div>
                                 </div>
@@ -166,10 +166,10 @@
                                         </div>
                                         <div class="info">
                                             <a href="/product/makeup-brush-set" class="shop-item-link">
-                                                Makeup brush set
+                                                Embryolisse
                                             </a>
-                                            <div class="shop-item-short-info">Enhancing beauty to let you shine</div>
-                                            <div class="shop-item-price">$&nbsp;34.00&nbsp;USD</div>
+                                            <div class="shop-item-short-info"> Lotion Micellaire Nettoie Demaquille - Apaise 50ml </div>
+                                            <div class="shop-item-price">&nbsp;80&nbsp;TMT</div>
                                         </div>
                                     </div>
                                 </div>
@@ -182,10 +182,10 @@
                                         </div>
                                         <div class="info">
                                             <a href="/product/makeup-brush-set" class="shop-item-link">
-                                                Makeup brush set
+                                              Avon BlissFul
                                             </a>
-                                            <div class="shop-item-short-info">Enhancing beauty to let you shine</div>
-                                            <div class="shop-item-price">$&nbsp;34.00&nbsp;USD</div>
+                                            <div class="shop-item-short-info">Sparkling lemon, bubble gum & pink sugar scent</div>
+                                            <div class="shop-item-price">&nbsp;180&nbsp;TMT</div>
                                         </div>
                                     </div>
                                 </div>
