--- a/index.html
+++ b/index.html
@@ -292,15 +292,8 @@
                                     <div class="main-shop-list-item">
                                         <div class="shop-links-wrapper">
                                             <div class="shop-link-block"><img loading="lazy" alt="photo"
-                                                    src="assets/images/Items/item (3).jpg" class="shop-list-image">
+                                                    src="assets/images/tayyn/1 (8).jpeg" class="shop-list-image">
                                             </div>
-                                        </div>
-                                        <div class="info">
-                                            <a href="/product/makeup-brush-set" class="shop-item-link">
-                                                Makeup brush set
-                                            </a>
-                                            <div class="shop-item-short-info">Enhancing beauty to let you shine</div>
-                                            <div class="shop-item-price">$&nbsp;34.00&nbsp;USD</div>
                                         </div>
                                     </div>
                                 </div>
@@ -308,15 +301,8 @@
                                     <div class="main-shop-list-item">
                                         <div class="shop-links-wrapper">
                                             <div class="shop-link-block"><img loading="lazy" alt="photo"
-                                                    src="assets/images/Items/item (4).jpg" class="shop-list-image">
+                                                    src="assets/images/tayyn/1 (9).jpg" class="shop-list-image">
                                             </div>
-                                        </div>
-                                        <div class="info">
-                                            <a href="/product/makeup-brush-set" class="shop-item-link">
-                                                Makeup brush set
-                                            </a>
-                                            <div class="shop-item-short-info">Enhancing beauty to let you shine</div>
-                                            <div class="shop-item-price">$&nbsp;34.00&nbsp;USD</div>
                                         </div>
                                     </div>
                                 </div>
@@ -324,15 +310,8 @@
                                     <div class="main-shop-list-item">
                                         <div class="shop-links-wrapper">
                                             <div class="shop-link-block"><img loading="lazy" alt="photo"
-                                                    src="assets/images/Items/item (1).jpg" class="shop-list-image">
+                                                    src="assets/images/tayyn/1 (10).jpeg" class="shop-list-image">
                                             </div>
-                                        </div>
-                                        <div class="info">
-                                            <a href="/product/makeup-brush-set" class="shop-item-link">
-                                                Makeup brush set
-                                            </a>
-                                            <div class="shop-item-short-info">2 beauty to let you shine</div>
-                                            <div class="shop-item-price">$&nbsp;34.00&nbsp;USD</div>
                                         </div>
                                     </div>
                                 </div>
@@ -340,15 +319,53 @@
                                     <div class="main-shop-list-item">
                                         <div class="shop-links-wrapper">
                                             <div class="shop-link-block"><img loading="lazy" alt="photo"
-                                                    src="assets/images/Items/item (2).jpg" class="shop-list-image">
+                                                    src="assets/images/tayyn/1 (11).jpg" class="shop-list-image">
                                             </div>
                                         </div>
-                                        <div class="info">
-                                            <a href="/product/makeup-brush-set" class="shop-item-link">
-                                                Makeup brush set
-                                            </a>
-                                            <div class="shop-item-short-info">Enhancing beauty to let you shine</div>
-                                            <div class="shop-item-price">$&nbsp;34.00&nbsp;USD</div>
+                                    </div>
+                                </div>
+                                <div class="shop-collection-item w-dyn-item">
+                                    <div class="main-shop-list-item">
+                                        <div class="shop-links-wrapper">
+                                            <div class="shop-link-block"><img loading="lazy" alt="photo"
+                                                    src="assets/images/tayyn/1 (12).jpeg" class="shop-list-image">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="shop-collection-item w-dyn-item">
+                                    <div class="main-shop-list-item">
+                                        <div class="shop-links-wrapper">
+                                            <div class="shop-link-block"><img loading="lazy" alt="photo"
+                                                    src="assets/images/tayyn/1 (13).jpg" class="shop-list-image">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="shop-collection-item w-dyn-item">
+                                    <div class="main-shop-list-item">
+                                        <div class="shop-links-wrapper">
+                                            <div class="shop-link-block"><img loading="lazy" alt="photo"
+                                                    src="assets/images/tayyn/1 (14).jpeg" class="shop-list-image">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="shop-collection-item w-dyn-item">
+                                    <div class="main-shop-list-item">
+                                        <div class="shop-links-wrapper">
+                                            <div class="shop-link-block"><img loading="lazy" alt="photo"
+                                                    src="assets/images/tayyn/1 (15).jpg" class="shop-list-image">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="shop-collection-item w-dyn-item">
+                                    <div class="main-shop-list-item">
+                                        <div class="shop-links-wrapper">
+                                            <div class="shop-link-block"><img loading="lazy" alt="photo"
+                                                    src="assets/images/tayyn/1 (16).jpeg" class="shop-list-image">
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -363,15 +380,8 @@
                                     <div class="main-shop-list-item">
                                         <div class="shop-links-wrapper">
                                             <div class="shop-link-block"><img loading="lazy" alt="photo"
-                                                    src="assets/images/Items/item (2).jpg" class="shop-list-image">
+                                                    src="assets/images/tayyn/1 (3).jpg" class="shop-list-image">
                                             </div>
-                                        </div>
-                                        <div class="info">
-                                            <a href="/product/makeup-brush-set" class="shop-item-link">
-                                                Makeup brush set
-                                            </a>
-                                            <div class="shop-item-short-info">Enhancing beauty to let you shine</div>
-                                            <div class="shop-item-price">$&nbsp;34.00&nbsp;USD</div>
                                         </div>
                                     </div>
                                 </div>
@@ -379,15 +389,8 @@
                                     <div class="main-shop-list-item">
                                         <div class="shop-links-wrapper">
                                             <div class="shop-link-block"><img loading="lazy" alt="photo"
-                                                    src="assets/images/Items/item (1).jpg" class="shop-list-image">
+                                                    src="assets/images/tayyn/1 (4).jpeg" class="shop-list-image">
                                             </div>
-                                        </div>
-                                        <div class="info">
-                                            <a href="/product/makeup-brush-set" class="shop-item-link">
-                                                Makeup brush set
-                                            </a>
-                                            <div class="shop-item-short-info">3 beauty to let you shine</div>
-                                            <div class="shop-item-price">$&nbsp;34.00&nbsp;USD</div>
                                         </div>
                                     </div>
                                 </div>
@@ -395,31 +398,8 @@
                                     <div class="main-shop-list-item">
                                         <div class="shop-links-wrapper">
                                             <div class="shop-link-block"><img loading="lazy" alt="photo"
-                                                    src="assets/images/Items/item (3).jpg" class="shop-list-image">
+                                                    src="assets/images/tayyn/1 (5).jpg" class="shop-list-image">
                                             </div>
-                                        </div>
-                                        <div class="info">
-                                            <a href="/product/makeup-brush-set" class="shop-item-link">
-                                                Makeup brush set
-                                            </a>
-                                            <div class="shop-item-short-info">Enhancing beauty to let you shine</div>
-                                            <div class="shop-item-price">$&nbsp;34.00&nbsp;USD</div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="shop-collection-item w-dyn-item">
-                                    <div class="main-shop-list-item">
-                                        <div class="shop-links-wrapper">
-                                            <div class="shop-link-block"><img loading="lazy" alt="photo"
-                                                    src="assets/images/Items/item (4).jpg" class="shop-list-image">
-                                            </div>
-                                        </div>
-                                        <div class="info">
-                                            <a href="/product/makeup-brush-set" class="shop-item-link">
-                                                Makeup brush set
-                                            </a>
-                                            <div class="shop-item-short-info">Enhancing beauty to let you shine</div>
-                                            <div class="shop-item-price">$&nbsp;34.00&nbsp;USD</div>
                                         </div>
                                     </div>
                                 </div>
@@ -433,15 +413,8 @@
                                     <div class="main-shop-list-item">
                                         <div class="shop-links-wrapper">
                                             <div class="shop-link-block"><img loading="lazy" alt="photo"
-                                                    src="assets/images/Items/item (4).jpg" class="shop-list-image">
+                                                    src="assets/images/tayyn/1 (2).jpeg" class="shop-list-image">
                                             </div>
-                                        </div>
-                                        <div class="info">
-                                            <a href="/product/makeup-brush-set" class="shop-item-link">
-                                                Makeup brush set
-                                            </a>
-                                            <div class="shop-item-short-info">Enhancing beauty to let you shine</div>
-                                            <div class="shop-item-price">$&nbsp;34.00&nbsp;USD</div>
                                         </div>
                                     </div>
                                 </div>
@@ -449,47 +422,8 @@
                                     <div class="main-shop-list-item">
                                         <div class="shop-links-wrapper">
                                             <div class="shop-link-block"><img loading="lazy" alt="photo"
-                                                    src="assets/images/Items/item (1).jpg" class="shop-list-image">
+                                                    src="assets/images/tayyn/1 (3).jpg" class="shop-list-image">
                                             </div>
-                                        </div>
-                                        <div class="info">
-                                            <a href="/product/makeup-brush-set" class="shop-item-link">
-                                                Makeup brush set
-                                            </a>
-                                            <div class="shop-item-short-info">4 beauty to let you shine</div>
-                                            <div class="shop-item-price">$&nbsp;34.00&nbsp;USD</div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="shop-collection-item w-dyn-item">
-                                    <div class="main-shop-list-item">
-                                        <div class="shop-links-wrapper">
-                                            <div class="shop-link-block"><img loading="lazy" alt="photo"
-                                                    src="assets/images/Items/item (2).jpg" class="shop-list-image">
-                                            </div>
-                                        </div>
-                                        <div class="info">
-                                            <a href="/product/makeup-brush-set" class="shop-item-link">
-                                                Makeup brush set
-                                            </a>
-                                            <div class="shop-item-short-info">Enhancing beauty to let you shine</div>
-                                            <div class="shop-item-price">$&nbsp;34.00&nbsp;USD</div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="shop-collection-item w-dyn-item">
-                                    <div class="main-shop-list-item">
-                                        <div class="shop-links-wrapper">
-                                            <div class="shop-link-block"><img loading="lazy" alt="photo"
-                                                    src="assets/images/Items/item (3).jpg" class="shop-list-image">
-                                            </div>
-                                        </div>
-                                        <div class="info">
-                                            <a href="/product/makeup-brush-set" class="shop-item-link">
-                                                Makeup brush set
-                                            </a>
-                                            <div class="shop-item-short-info">Enhancing beauty to let you shine</div>
-                                            <div class="shop-item-price">$&nbsp;34.00&nbsp;USD</div>
                                         </div>
                                     </div>
                                 </div>
