--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                                             </div>
                                             <div class="info">
                                                 <a class="shop-item-link">
-                                                    Мусс для обьем </a>
+                                                    Мусс для обьемa от Faberlic </a>
                                                 <div class="shop-item-price">&nbsp;70&nbsp;TMT</div>
                                             </div>
                                         </div>
@@ -260,7 +260,7 @@
                                             </div>
                                             <div class="info">
                                                 <a class="shop-item-link">
-                                                    Крем для рук от Faberlic </a>
+                                                    Крем для рук от Oriflame </a>
                                                 <div class="shop-item-price">&nbsp;25&nbsp;TMT</div>
                                             </div>
                                         </div>
@@ -316,14 +316,229 @@
                                             </div>
                                             <div class="info">
                                                 <a class="shop-item-link">
-                                                    парфюмерный спрей от Avon </a>
+                                                    Celebre парфюмированный Спрей для Тела от Avon </a>
                                                 <div class="shop-item-price">&nbsp;60&nbsp;TMT</div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-
-
+                                <div class="shop-collection-item w-dyn-item">
+                                    <div class="main-shop-list-item">
+                                        <div class="shop-links-wrapper">
+                                            <div class="shop-link-block"><img loading="lazy" alt="photo"
+                                                    src="assets/images/gold apple/1 Golden Rose Mega Volume&Length City Style Mascara Тушь для ресниц.jpg"
+                                                    class="shop-list-image">
+                                            </div>
+                                            <div class="info">
+                                                <a class="shop-item-link">
+                                                    Golden Rose Mega Volume&Length City Style Mascara  </a>
+                                                <div class="shop-item-short-info">
+                                                    Тушь для ресниц
+                                                 </div>
+                                                <div class="shop-item-price">&nbsp;40&nbsp;TMT</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="shop-collection-item w-dyn-item">
+                                    <div class="main-shop-list-item">
+                                        <div class="shop-links-wrapper">
+                                            <div class="shop-link-block"><img loading="lazy" alt="photo"
+                                                    src="assets/images/gold apple/2 Golden Rose VOLUME & DEFINE MIRACLE LASH ULTRA BLACK MASCARA.jpg"
+                                                    class="shop-list-image">
+                                            </div>
+                                            <div class="info">
+                                                <a class="shop-item-link">
+                                                    Golden Rose VOLUME & DEFINE MIRACLE LASH ULTRA BLACK MASCARA  </a>
+                                                <div class="shop-item-short-info">
+                                                    Тушь для ресниц
+                                                 </div>
+                                                <div class="shop-item-price">&nbsp;40&nbsp;TMT</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="shop-collection-item w-dyn-item">
+                                    <div class="main-shop-list-item">
+                                        <div class="shop-links-wrapper">
+                                            <div class="shop-link-block"><img loading="lazy" alt="photo"
+                                                    src="assets/images/gold apple/3 L'Oreal Paris ALLIANCE PERFECT тональные средства.jpg"
+                                                    class="shop-list-image">
+                                            </div>
+                                            <div class="info">
+                                                <a class="shop-item-link">
+                                                    L'Oreal Paris ALLIANCE PERFECT   </a>
+                                                <div class="shop-item-short-info">
+                                                    тональные средства
+                                                 </div>
+                                                <div class="shop-item-price">&nbsp;195&nbsp;TMT</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="shop-collection-item w-dyn-item">
+                                    <div class="main-shop-list-item">
+                                        <div class="shop-links-wrapper">
+                                            <div class="shop-link-block"><img loading="lazy" alt="photo"
+                                                    src="assets/images/gold apple/4 L'Oreal Paris INFAILLIBLE 24H FRESH WEAR ПУДРА НОВОГО ПОКОЛЕНИЯ.jpg"
+                                                    class="shop-list-image">
+                                            </div>
+                                            <div class="info">
+                                                <a class="shop-item-link">
+                                                    Golden Rose VOLUME & DEFINE MIRACLE LASH ULTRA BLACK MASCARA  </a>
+                                                <div class="shop-item-short-info">
+                                                    ПУДРА НОВОГО ПОКОЛЕНИЯ
+                                                 </div>
+                                                <div class="shop-item-price">&nbsp;195&nbsp;TMT</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="shop-collection-item w-dyn-item">
+                                    <div class="main-shop-list-item">
+                                        <div class="shop-links-wrapper">
+                                            <div class="shop-link-block"><img loading="lazy" alt="photo"
+                                                    src="assets/images/gold apple/5 L'Oreal Paris Telescopic туши для ресниц Тушь для ресниц.jpg"
+                                                    class="shop-list-image">
+                                            </div>
+                                            <div class="info">
+                                                <a class="shop-item-link">
+                                                    L'Oreal Paris Telescopic туши для ресниц</a>
+                                                <div class="shop-item-short-info">
+                                                    Тушь для ресниц
+                                                 </div>
+                                                <div class="shop-item-price">&nbsp;195&nbsp;TMT</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="shop-collection-item w-dyn-item">
+                                    <div class="main-shop-list-item">
+                                        <div class="shop-links-wrapper">
+                                            <div class="shop-link-block"><img loading="lazy" alt="photo"
+                                                    src="assets/images/gold apple/6 L'Oreal Paris ВОЗРАСТ ЭКСПЕРТ 35+.jpg"
+                                                    class="shop-list-image">
+                                            </div>
+                                            <div class="info">
+                                                <a class="shop-item-link">
+                                                    L'Oreal Paris ВОЗРАСТ ЭКСПЕРТ 35+  </a>
+                                                <div class="shop-item-short-info">
+                                                    Ночной крем
+                                                 </div>
+                                                <div class="shop-item-price">&nbsp;125&nbsp;TMT</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="shop-collection-item w-dyn-item">
+                                    <div class="main-shop-list-item">
+                                        <div class="shop-links-wrapper">
+                                            <div class="shop-link-block"><img loading="lazy" alt="photo"
+                                                    src="assets/images/gold apple/7 Maybelline New York Affinitone Тональный крем для лица.jpg"
+                                                    class="shop-list-image">
+                                            </div>
+                                            <div class="info">
+                                                <a class="shop-item-link">
+                                                    Maybelline New York Affinitone </a>
+                                                <div class="shop-item-short-info">
+                                                    Тональный крем для лица
+                                                 </div>
+                                                <div class="shop-item-price">&nbsp;115&nbsp;TMT</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="shop-collection-item w-dyn-item">
+                                    <div class="main-shop-list-item">
+                                        <div class="shop-links-wrapper">
+                                            <div class="shop-link-block"><img loading="lazy" alt="photo"
+                                                    src="assets/images/gold apple/8 Maybelline New York Lash Sensational Водостойкая тушь для ресниц.jpg"
+                                                    class="shop-list-image">
+                                            </div>
+                                            <div class="info">
+                                                <a class="shop-item-link">
+                                                    Maybelline New York Lash Sensational Водостойкая </a>
+                                                <div class="shop-item-short-info">
+                                                    тушь для ресниц
+                                                 </div>
+                                                <div class="shop-item-price">&nbsp;125&nbsp;TMT</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="shop-collection-item w-dyn-item">
+                                    <div class="main-shop-list-item">
+                                        <div class="shop-links-wrapper">
+                                            <div class="shop-link-block"><img loading="lazy" alt="photo"
+                                                    src="assets/images/gold apple/10 Topface Skin Editor Matte Foundation Тональный крем матирующий SPF20.jpg"
+                                                    class="shop-list-image">
+                                            </div>
+                                            <div class="info">
+                                                <a class="shop-item-link">
+                                                    Topface Skin Editor Matte Foundation </a>
+                                                <div class="shop-item-short-info">
+                                                    Тональный крем матирующий SPF20
+                                                 </div>
+                                                <div class="shop-item-price">&nbsp;125&nbsp;TMT</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="shop-collection-item w-dyn-item">
+                                    <div class="main-shop-list-item">
+                                        <div class="shop-links-wrapper">
+                                            <div class="shop-link-block"><img loading="lazy" alt="photo"
+                                                    src="assets/images/gold apple/11 Topface Twin Blush On румяна.jpg"
+                                                    class="shop-list-image">
+                                            </div>
+                                            <div class="info">
+                                                <a class="shop-item-link">
+                                                    11 Topface Twin Blush On </a>
+                                                <div class="shop-item-short-info">
+                                                    Румяна для лица двойные
+                                                 </div>
+                                                <div class="shop-item-price">&nbsp;95&nbsp;TMT</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="shop-collection-item w-dyn-item">
+                                    <div class="main-shop-list-item">
+                                        <div class="shop-links-wrapper">
+                                            <div class="shop-link-block"><img loading="lazy" alt="photo"
+                                                    src="assets/images/gold apple/12 VIVIENNE SABO Waterproof Mascara Volumateur Artistique Водостойкая тушь для ресниц с эффектом сценического объёма.jpg"
+                                                    class="shop-list-image">
+                                            </div>
+                                            <div class="info">
+                                                <a class="shop-item-link">
+                                                    12 VIVIENNE SABO Waterproof Mascara Volumateur Artistique</a>
+                                                <div class="shop-item-short-info">
+                                                    Водостойкая тушь для ресниц с эффектом сценического объёма
+                                                 </div>
+                                                <div class="shop-item-price">&nbsp;95&nbsp;TMT</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="shop-collection-item w-dyn-item">
+                                    <div class="main-shop-list-item">
+                                        <div class="shop-links-wrapper">
+                                            <div class="shop-link-block"><img loading="lazy" alt="photo"
+                                                    src="assets/images/gold apple/9 Topface Skin Editor Matte Finishing Powder Пудра матирующая для лица.jpg"
+                                                    class="shop-list-image">
+                                            </div>
+                                            <div class="info">
+                                                <a class="shop-item-link">
+                                                    Topface Skin Editor Matte Finishing Powder</a>
+                                                <div class="shop-item-short-info">
+                                                    Пудра матирующая для лица
+                                                 </div>
+                                                <div class="shop-item-price">&nbsp;95&nbsp;TMT</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                
 
 
 
@@ -370,7 +585,7 @@
                                             </div>
                                             <div class="info">
                                                 <a class="shop-item-link">
-                                                    парфюмерный спрей от Avon </a>
+                                                    Celebre парфюмированный Спрей для Тела от Avon </a>
                                                 <div class="shop-item-price">&nbsp;60&nbsp;TMT</div>
                                             </div>
                                         </div>
@@ -482,7 +697,7 @@
                                             </div>
                                             <div class="info">
                                                 <a class="shop-item-link">
-                                                    Мусс для обьем </a>
+                                                    Мусс для обьемa от Faberlic  </a>
                                                 <div class="shop-item-price">&nbsp;70&nbsp;TMT</div>
                                             </div>
                                         </div>
